simple addition case

--- a/css/style.css
+++ b/css/style.css
@@ -108,3 +108,8 @@ footer {
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
+
+
+
+
+/* Help on round buttons from: https://alvarotrigo.com/blog/css-round-button/ */
